--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,18 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules --no-notify src/server.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.9",
+    "ts-node-dev": "^1.0.0",
+    "typescript": "^4.1.2"
+  },
   "dependencies": {
-    "celebrate": "^13.0.4",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "path": "^0.12.7"
+    "express": "^4.17.1"
   }
 }
