--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -75,5 +75,8 @@
       "@views/*":["./src/views/*"],
       "@config/*":["./src/config/*"],
     }
-  }
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
