--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.7",
     "mongoose-paginate": "^5.0.3",
